--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "html2canvas": "^1.0.0-rc.5",
     "vant": "^2.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
