--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "html2canvas": "^1.0.0-rc.5",
+    "less": "^3.12.2",
+    "less-loader": "^6.2.0",
     "vant": "^2.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
