--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "echarts": "^4.9.0",
     "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.5.1",
     "less": "^3.12.2",
