--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "less-loader": "^6.2.0",
     "vant": "^2.7.1",
     "vue": "^2.6.11",
+    "vue-qr": "^2.3.0",
     "vue-router": "^3.1.6",
     "vuex": "^3.5.1"
   },
